--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,12 +12,14 @@ Verwende em Werte für die top und right Werte des Schließen-Buttons. */
     font-family: Arial, Helvetica, sans-serif;
 }
 
-
-section {
-    background: url(../img/photo-1474511320723-9a56873867b5.jpeg) no-repeat center/cover;
+body {
     height: 100vh;
     width: 100vw;
-    padding: 50% 50%;
+    background: url(../img/photo-1474511320723-9a56873867b5.jpeg) no-repeat center/cover;
+}
+
+section {    
+     padding: 33% 50%;
     
 }
 
